# Current

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  architecture.md  build_and_run_linux.sh  build_and_run_mac.sh  build_and_run_win.bat  code-review-2026-07.md  generate_compile_commands.sh  generate_xcode.sh  generative-midi-plugin-requirements.md  modules.md  run_mac.sh
design/: module-window.md
docs/: architecture.md  modules.md
include/: AuditionSynth.h  Canvas.h  CurrentLookAndFeel.h  Engine.h  EngineGraph.h  GeneratorSettings.h  HelpText.h  InlineDialog.h  MainView.h  MenuBar.h  MessageStrip.h  ModuleComponent.h  ModuleSettings.h  ModuleTypes.h  ModuleWindow.h  PaletteBar.h  PluginEditor.h  PluginProcessor.h  ProgressionStepList.h  RhythmizeStepGrid.h  ScaleTables.h  SettingsView.h  StepperControl.h  Theme.h
resources/: help.json
source/: AuditionSynth.cpp  Canvas.cpp  Engine.cpp  HelpText.cpp  InlineDialog.cpp  MainView.cpp  MenuBar.cpp  MessageStrip.cpp  ModuleComponent.cpp  ModuleWindow.cpp  PaletteBar.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProgressionStepList.cpp  RhythmizeStepGrid.cpp  SettingsView.cpp  StepperControl.cpp
source/Canvas/: CanvasComponent.cpp  CanvasComponent.h  ModuleComponent.cpp  ModuleComponent.h  ModulePalette.cpp  ModulePalette.h
source/Modules/: ModuleType.h
source/UI/: ColourScheme.h  GlobalSettingsBar.cpp  GlobalSettingsBar.h  InlineDialog.cpp  InlineDialog.h  PluginLookAndFeel.cpp  PluginLookAndFeel.h
tools/: audition_smoketest.cpp  engine_smoketest.cpp  shoot_random_window.sh
